plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.0'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'xatal'
version = '0.0.1'

java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation group: 'com.yannbriancon', name: 'spring-hibernate-query-utils', version: '2.0.0'
    implementation group: 'org.simplejavamail', name: 'simple-java-mail', version: '8.5.1'
//    implementation group: 'org.springframework', name: 'spring-web', version: '6.1.2'
//    implementation group: 'org.springframework', name: 'spring-webmvc', version: '3.1.1.RELEASE'
//    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
    implementation 'org.mariadb.jdbc:mariadb-java-client:2.1.2'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}

